# simple-e-commerce-api

./: .env  Cargo.toml  LICENSE  README.md  docker-compose.yml
migrations/: 20241202084029_init.down.sql  20241202084029_init.up.sql
src/: main.rs
src/utils/: custom_validator.rs  mod.rs  token_service.rs
