[package]
name = "simple-e-commerce-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlx-postgres", "postgres"] }
fake = { version = "3.0.0", features = ["derive"] }
dotenv = "0.15.0"
bcrypt = "0.16.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_with = "3.11.0"
validator = { version = "0.19.0", features = ["derive"] }
url = "2.5.4"
tracing = "0.1.41"
jsonwebtoken = "9.3.0"
chrono = "0.4.38"
uuid = { version = "1.11.0", features = ["v4"] }


